selfhost/test/parser/match_error_case_bad_token.out
Error at %FILE_NAME%:1:13
Unexpected token '%', expected one of '}', 'int', 'float', 'true', 'string', 'identifier', 'else':
  |  match foo { % => 123 }
                 ^